--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
         <a href="tel:91989898">Call someone</a>
         <br>
         <a href="lists.html">Open lists</a>
+        <br>
+        <h3>
+            Are You My Mentor? – The advice is given that working professionals need a mentor but that the relationship between teacher and student cannot be forced. An anecdote is given about Clara Shih regularly asking questions in business that showed respect for her mentors' time.
+        </h3>
     </body>
 </html>
