--- a/tables.html
+++ b/tables.html
@@ -28,17 +28,35 @@
             </tr>
             <tr>
                 <td>Tuesday</td>
+                <td>DCCN</td>
+                <td></td>
+                <td>RET</td>
+                <td>TOC</td>
                 <td></td>
             </tr>
             <tr>
                 <td>Wednesday</td>
+                <td></td>
+                <td>RET</td>
+                <td>DCCN <br>Lab</td>
+                <td>CGM</td>
+                <td>TOC</td>
             </tr>
             
             <tr>
                 <td>Thursday</td>
+                <td>HVPE</td>
+                <td>RET</td>
+                <td>DWDM</td>
+                <td>DCCN</td>
+                <td>TOC</td>
             </tr>
             <tr>
                 <td>Friday</td>
+                <td colspan="2" align="center">RET</td>
+                <td>TOC</td>
+                <td></td>
+                <td>CGM</td>
             </tr>
         </table>
     </body>
